[package]
name = "cobalt_tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "cobalt_tools"

[dependencies]
reqwest = { version = "0.12.9", features = ["gzip", "brotli", "deflate", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
once_cell = "1.20.2"